--- a/html-boilerplate-main/src/index.html
+++ b/html-boilerplate-main/src/index.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Когнитивные искажения Pengu1nus</title>
-
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Neucha&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/css/app.min.css">
 </head>
 <body>
-
+    <header class="header">
+        <h1 class="title">Макет для вёрстки</h1>
+    </header>
+    <main>
+        <section></section>
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
